--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,7 @@ p {
   margin-bottom: 0;
 }
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   color: #434455;
   background-color: #fff;
 }
@@ -52,7 +52,7 @@ img {
 }
 .logo {
   color: #4d5ae5;
-  font-family: 'Raleway', sans-serif;
+  font-family: "Raleway", sans-serif;
   font-weight: 700;
   font-size: 18px;
   line-height: 1.17;
@@ -83,7 +83,7 @@ img {
   color: #404bbf;
 }
 .current::after {
-  content: '';
+  content: "";
   position: absolute;
   left: 0;
   bottom: -1px;
@@ -188,6 +188,228 @@ img {
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
+/* Backdrop start */
+.backdrop {
+  position: fixed;
+  opacity: 0;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  visibility: hidden;
+  pointer-events: none;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.backdrop.is-open {
+  width: 100%;
+  height: 100%;
+  opacity: 1;
+  background-color: rgba(46, 47, 66, 0.4);
+  pointer-events: auto;
+  visibility: visible;
+}
+
+.modal {
+  position: absolute;
+  background: #fcfcfc;
+  display: flex;
+  flex-direction: column;
+  top: 50%;
+  left: 50%;
+  width: 408px;
+  min-height: 584px;
+  margin: auto;
+  border-radius: 4px;
+  padding: 72px 24px 24px 24px;
+  transform: translate(-50%, -50%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+}
+
+.close-button {
+  position: absolute;
+  top: 24px;
+  right: 24px;
+  width: 24px;
+  height: 24px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  margin: 0 0 24px 0;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  background-color: #e7e9fc;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  padding: 0;
+  cursor: pointer;
+}
+
+.close-butt-icon {
+  fill: #2e2f42;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.close-button:hover .close-butt-icon,
+.close-button:focus .close-butt-icon {
+  fill: #ffffff;
+}
+
+.close-button:hover,
+.close-button:active,
+.close-button:focus {
+  background-color: #404bbf;
+  border: none;
+}
+
+.forminput-div {
+  margin-bottom: 8px;
+}
+
+.form-header {
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  text-align: center;
+  color: #2e2f42;
+  margin-bottom: 16px;
+}
+
+.form-label {
+  display: block;
+  position: relative;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 1.17;
+  margin-bottom: 4px;
+  letter-spacing: 0.04em;
+  text-align: left;
+  color: #8e8f99;
+}
+
+.form-input {
+  width: 100%;
+  height: 40px;
+  top: 18px;
+  font-size: 18px;
+  color: #2e2f42;
+  border-radius: 4px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  background-color: transparent;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  padding-left: 38px;
+  outline: transparent;
+}
+
+.icon-input-group {
+  position: relative;
+}
+
+.input-icon {
+  fill: #2e2f42;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  left: 16px;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-input:focus {
+  border: 1px solid #4d5ae5;
+}
+
+.form-input:focus-within + .input-icon {
+  fill: #4d5ae5;
+}
+
+#name:focus .input-icon {
+  fill: #4d5ae5;
+}
+
+.formcomment-div {
+  margin-bottom: 16px;
+}
+
+.form-textarea {
+  padding: 8px 16px;
+  width: 360px;
+  height: 120px;
+  color: rgba(46, 47, 66, 0.4);
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  border-radius: 4px;
+  border-color: rgba(46, 47, 66, 0.4);
+  resize: none;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  background-color: transparent;
+  outline: transparent;
+}
+
+.form-textarea:focus {
+  border-color: #4d5ae5;
+}
+
+.label-checkbox {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: #8e8f99;
+}
+
+.div-form-checkbox a {
+  text-decoration: underline;
+}
+
+.checkbox-icon {
+  fill: #fff;
+}
+
+.checkbox-view {
+  cursor: pointer;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  width: 16px;
+  height: 16px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 2px;
+  margin-right: 8px;
+  fill: transparent;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+#user-privacy:checked + .label-checkbox .checkbox-view {
+  background-color: #404bbf;
+  border: none;
+  fill: #f4f4fd;
+}
+
+.privacy-style {
+  color: #4d5ae5;
+}
+
+.div-form-checkbox {
+  margin-bottom: 24px;
+  display: flex;
+}
+
+.div-form-checkbox p {
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 14px;
+  letter-spacing: 0.04em;
+  text-align: left;
+  color: #2e2f42;
+}
+/* Backdrop end */
 .benefits-list {
   display: flex;
   justify-content: center;
@@ -264,8 +486,6 @@ img {
   letter-spacing: 0.02em;
   text-align: center;
   color: #2e2f42;
-  padding-top: 32px;
-  padding-bottom: 8px;
   margin-bottom: 8px;
 }
 .team-prof {
@@ -274,7 +494,7 @@ img {
   letter-spacing: 0.02em;
   text-align: center;
   color: #434455;
-  padding-bottom: 8px;
+  margin-bottom: 8px;
   width: calc((100%-72px) / 4);
 }
 .social-link {
@@ -365,8 +585,6 @@ img {
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: #2e2f42;
-  padding-top: 32px;
-  padding-bottom: 8px;
   padding-left: 16px;
   margin-bottom: 8px;
 }
@@ -376,7 +594,6 @@ img {
   letter-spacing: 0.02em;
   color: #434455;
   padding-left: 16px;
-  padding-bottom: 32px;
 }
 /* Footer */
 .footer-back-color {
@@ -404,13 +621,15 @@ img {
   color: #f4f4fd;
   margin-top: 16px;
 }
+/* Social */
 .social-container {
   display: block;
   align-items: center;
   justify-content: center;
+  margin-right: 80px;
 }
 .social-title {
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
@@ -438,4 +657,78 @@ img {
 .footer-link:hover,
 .footer-link:focus {
   background-color: #31d0aa;
+}
+/* Subscribe */
+.footer-third {
+  display: flex;
+  flex-direction: column;
+}
+
+.footer-links-sign-two {
+  margin-bottom: 16px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #ffffff;
+}
+
+.subscribe-form {
+  display: flex;
+  gap: 24px;
+}
+
+.subscribe-label {
+  display: flex;
+}
+
+.footer-input {
+  border: 1px solid white;
+  background-color: transparent;
+  font-size: 12px;
+  line-height: 2;
+  letter-spacing: 0.04em;
+  border-radius: 4px;
+  width: 264px;
+  height: 40px;
+  padding-left: 16px;
+  color: white;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+}
+
+.footer-input::placeholder {
+  color: white;
+}
+
+.footer-input:focus {
+  outline: none;
+}
+
+.button-subs {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #fff;
+  font-family: "Roboto", sans-serif;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  background-color: #4d5ae5;
+  border: none;
+  border-radius: 4px;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+  min-width: 165px;
+  height: 40px;
+  cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.button-subs:hover,
+.button-subs:focus {
+  background-color: #404bbf;
+}
+
+.icon-subs {
+  margin-left: 16px;
 }
