--- a/css/styles.css
+++ b/css/styles.css
@@ -659,12 +659,11 @@ img {
   background-color: #31d0aa;
 }
 /* Subscribe */
-.footer-third {
+.subscribe-container {
   display: flex;
   flex-direction: column;
 }
-
-.footer-links-sign-two {
+.subscribe-link {
   margin-bottom: 16px;
   font-weight: 500;
   font-size: 16px;
@@ -672,17 +671,14 @@ img {
   letter-spacing: 0.02em;
   color: #ffffff;
 }
-
 .subscribe-form {
   display: flex;
   gap: 24px;
 }
-
 .subscribe-label {
   display: flex;
 }
-
-.footer-input {
+.subscribe-input {
   border: 1px solid white;
   background-color: transparent;
   font-size: 12px;
@@ -695,21 +691,17 @@ img {
   color: white;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
-
-.footer-input::placeholder {
+.subscribe-input::placeholder {
   color: white;
 }
-
-.footer-input:focus {
+.subscribe-input:focus {
   outline: none;
 }
-
-.button-subs {
+.subscribe-button {
   display: flex;
   align-items: center;
   justify-content: center;
   color: #fff;
-  font-family: "Roboto", sans-serif;
   font-size: 16px;
   font-weight: 500;
   line-height: 1.5;
@@ -723,12 +715,10 @@ img {
   cursor: pointer;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.button-subs:hover,
-.button-subs:focus {
+.subscribe-button:hover,
+.subscribe-button:focus {
   background-color: #404bbf;
 }
-
-.icon-subs {
+.subscribe-icon {
   margin-left: 16px;
 }
