--- a/css/styles.css
+++ b/css/styles.css
@@ -196,12 +196,13 @@ img {
   top: 0;
   width: 100%;
   height: 100%;
+  background-color: rgba(46, 47, 66, 0.4);
+  z-index: 99999;
   visibility: hidden;
   pointer-events: none;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
 .backdrop.is-open {
   width: 100%;
   height: 100%;
@@ -210,10 +211,9 @@ img {
   pointer-events: auto;
   visibility: visible;
 }
-
 .modal {
   position: absolute;
-  background: #fcfcfc;
+  background-color: #fcfcfc;
   display: flex;
   flex-direction: column;
   top: 50%;
@@ -223,13 +223,12 @@ img {
   margin: auto;
   border-radius: 4px;
   padding: 72px 24px 24px 24px;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%) scale(1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
     0px 2px 1px rgba(0, 0, 0, 0.2);
 }
-
-.close-button {
+.modal-close-button {
   position: absolute;
   top: 24px;
   right: 24px;
@@ -247,29 +246,23 @@ img {
   padding: 0;
   cursor: pointer;
 }
-
-.close-butt-icon {
+.close-button-icon {
   fill: #2e2f42;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.close-button:hover .close-butt-icon,
-.close-button:focus .close-butt-icon {
-  fill: #ffffff;
-}
-
-.close-button:hover,
-.close-button:active,
-.close-button:focus {
+.modal-close-button:hover,
+.modal-close-button:focus {
   background-color: #404bbf;
   border: none;
 }
-
-.forminput-div {
+.modal-close-button:hover .close-button-icon,
+.modal-close-button:focus .close-button-icon {
+  fill: #ffffff;
+}
+.form-input-container {
   margin-bottom: 8px;
 }
-
-.form-header {
+.form-title {
   font-size: 16px;
   font-weight: 500;
   line-height: 1.5;
@@ -278,19 +271,16 @@ img {
   color: #2e2f42;
   margin-bottom: 16px;
 }
-
 .form-label {
   display: block;
   position: relative;
   font-size: 12px;
-  font-weight: 400;
   line-height: 1.17;
   margin-bottom: 4px;
   letter-spacing: 0.04em;
   text-align: left;
   color: #8e8f99;
 }
-
 .form-input {
   width: 100%;
   height: 40px;
@@ -304,36 +294,29 @@ img {
   padding-left: 38px;
   outline: transparent;
 }
-
 .icon-input-group {
   position: relative;
 }
-
 .input-icon {
-  fill: #2e2f42;
   position: absolute;
   top: 50%;
-  transform: translateY(-50%);
   left: 16px;
+  transform: translateY(-50%);
+  fill: #2e2f42;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
 .form-input:focus {
   border: 1px solid #4d5ae5;
 }
-
 .form-input:focus-within + .input-icon {
   fill: #4d5ae5;
 }
-
 #name:focus .input-icon {
   fill: #4d5ae5;
 }
-
-.formcomment-div {
+.form-comment-container {
   margin-bottom: 16px;
 }
-
 .form-textarea {
   padding: 8px 16px;
   width: 360px;
@@ -349,11 +332,9 @@ img {
   background-color: transparent;
   outline: transparent;
 }
-
 .form-textarea:focus {
   border-color: #4d5ae5;
 }
-
 .label-checkbox {
   font-weight: 400;
   font-size: 12px;
@@ -361,15 +342,12 @@ img {
   letter-spacing: 0.04em;
   color: #8e8f99;
 }
-
-.div-form-checkbox a {
+.form-checkbox a {
   text-decoration: underline;
 }
-
 .checkbox-icon {
   fill: #fff;
 }
-
 .checkbox-view {
   cursor: pointer;
   display: inline-flex;
@@ -385,23 +363,19 @@ img {
     border 250ms cubic-bezier(0.4, 0, 0.2, 1),
     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
 #user-privacy:checked + .label-checkbox .checkbox-view {
   background-color: #404bbf;
   border: none;
   fill: #f4f4fd;
 }
-
 .privacy-style {
   color: #4d5ae5;
 }
-
-.div-form-checkbox {
+.form-checkbox {
   margin-bottom: 24px;
   display: flex;
 }
-
-.div-form-checkbox p {
+.form-checkbox p {
   font-size: 12px;
   font-weight: 400;
   line-height: 14px;
@@ -722,3 +696,4 @@ img {
 .subscribe-icon {
   margin-left: 16px;
 }
+/* Для бекдропу можна додавати opacity: 0; visibility: hidden; pointer-events: none; А для селектора .backdrop.is-open - opacity; 1;  pointer-events: auto; visibility: visible; */
